# pidgin-extprefs

./: .cvsignore  AUTHORS  ChangeLog  INSTALL  INSTALL-win32.txt  Makefile  Makefile.am  Makefile.mingw  NEWS  TODO  VERSION  autogen.sh  configure.ac
src/: .cvsignore  Makefile  Makefile.am  Makefile.mingw  extendedprefs.c
